[gd_scene load_steps=3 format=3 uid="uid://bkgp3sh5duer7"]

[ext_resource type="Script" path="res://scenes/Taco_Trucker.gd" id="1_h645n"]
[ext_resource type="Script" path="res://scenes/taco_trucker_first_window.gd" id="2_pr7pl"]

[node name="Taco_TruckerGame" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h645n")

[node name="Taco_Trucker_First_Window" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_pr7pl")

[node name="Taco_Amount" type="Label" parent="Taco_Trucker_First_Window"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 411.0
offset_top = 353.0
offset_right = -473.0
offset_bottom = -239.0
theme_type_variation = &"HeaderMedium"
text = "Tacos: <tacos>"
horizontal_alignment = 1

[node name="Taco_Button" type="Button" parent="Taco_Trucker_First_Window"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = 114.0
offset_right = 86.0
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
text = "Get 1 big Taco"
